[gd_scene load_steps=15 format=2]

[ext_resource path="res://MoveSprite.gd" type="Script" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://sprites/player/player_gun_idle.png" type="Texture" id=3]
[ext_resource path="res://sprites/player/player_gun_active.png" type="Texture" id=4]
[ext_resource path="res://sprites/player/player_base_1.png" type="Texture" id=5]
[ext_resource path="res://sprites/reticle/reticle_filled.png" type="Texture" id=6]
[ext_resource path="res://sprites/reticle/reticle_empty.png" type="Texture" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ) ],
"loop": false,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": false,
"name": "moving",
"speed": 5.0
} ]

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.104478, 0.21791, 1 )
colors = PoolColorArray( 0.609704, 0.609704, 0.609704, 1, 0.760873, 0.760873, 0.760873, 0.517241, 0.537688, 0.537688, 0.537688, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=4]
emission_shape = 1
emission_sphere_radius = 12.0
flag_disable_z = true
spread = 20.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 60.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 4.0
scale_random = 0.5
color_ramp = SubResource( 3 )
hue_variation_random = 1.0

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "shooting",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=8]
radius = 13.0967
height = 17.5266

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "empty",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "filled",
"speed": 5.0
} ]

[node name="Player" type="KinematicBody2D"]
collision_mask = 3
script = ExtResource( 2 )

[node name="MoveSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "idle"
script = ExtResource( 1 )

[node name="MovementParticles2D" type="Particles2D" parent="MoveSprite"]
position = Vector2( 0, 32 )
rotation = 1.5708
emitting = false
amount = 500
lifetime = 0.5
speed_scale = 1.25
process_material = SubResource( 4 )

[node name="AimSprite" type="AnimatedSprite" parent="."]
z_index = -1
frames = SubResource( 7 )
animation = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.132427, -1.5892 )
rotation = 1.5708
shape = SubResource( 8 )

[node name="FireTimer" type="Timer" parent="."]

[node name="AimRayLine2D" type="Line2D" parent="."]
visible = false
points = PoolVector2Array( 0, 0, 0, 0 )
width = 1.0
default_color = Color( 1, 1, 1, 0.498039 )

[node name="AimRayCast2D" type="RayCast2D" parent="."]
cast_to = Vector2( 0, 0 )
collision_mask = 3

[node name="ReticleSprite" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 6 )
animation = "empty"
[connection signal="timeout" from="FireTimer" to="." method="_on_Timer_timeout"]
